syntax = "proto3";
package Stridelabs.stride.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Stride-Labs/stride/x/claim/types";

// Msg defines the Msg service.
service Msg {
  rpc SetAirdropAllocations(MsgSetAirdropAllocations) returns (MsgSetAirdropAllocationsResponse);
  rpc ClaimFreeAmount(MsgClaimFreeAmount) returns (MsgClaimFreeAmountResponse);
}

message MsgSetAirdropAllocations {
  string allocator = 1;
  string airdrop_identifier = 2 [ (gogoproto.moretags) = "yaml:\"identifier\"" ];
  repeated string users = 3;
  repeated string weights = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"weights\""
  ];
}

message MsgSetAirdropAllocationsResponse {}

message MsgClaimFreeAmount {
  string user = 1;
  string airdrop_identifier = 2 [ (gogoproto.moretags) = "yaml:\"identifier\"" ];
}

message MsgClaimFreeAmountResponse {
  repeated cosmos.base.v1beta1.Coin claimed_amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}