syntax = "proto3";
package stride.stakeibc.v1;
option go_package = "github.com/Stride-Labs/stride/v4/x/stakeibc/types/v1";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// ---------------------- Delegation Callbacks ---------------------- //
message SplitDelegation {
  string validator = 1;
  uint64 amount = 2;
}

message DelegateCallback {
  string host_zone_id = 1;
  uint64 deposit_record_id = 2;
  repeated SplitDelegation split_delegations = 3;
}

message UndelegateCallback {
  string host_zone_id = 1;
  repeated SplitDelegation split_delegations = 2;
  repeated uint64 epoch_unbonding_record_ids = 3;
}

message Rebalancing {
  string src_validator = 1;
  string dst_validator = 2;
  uint64 amt = 3;
}

message RebalanceCallback {
  string host_zone_id = 1;
  repeated Rebalancing rebalancings = 2;
}